# bevy-wired

./: .gitignore  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
.cargo/: config.toml
examples/: simple_wireframe.rs  wireframe.rs
src/: lib.rs
src/pipeline/: mesh.rs  mod.rs  simple.rs  wireframe.rs
src/pipeline/shaders/: simple_wireframe.wgsl  wireframe.wgsl
