[package]
name = "bevy_stylized_wireframe"
description = "Stylized wireframe rendering"
version = "0.0.0"
authors = ["Aceeri (conmcclusk@gmail.com)"]
homepage = "https://github.com/aceeri/bevy_stylized_wireframe"
repository = "https://github.com/aceeri/bevy_stylized_wireframe"
license = "MIT + APACHE"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", "github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.6.1", default-features = true }

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.3"
